--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     height:60px;
     margin-left:auto;
     margin-right:auto;
+    position: relative;
 }
 
 #search{
@@ -16,10 +17,15 @@
     font-size:30px;
 }
 
+
 #glass{
     display:inline-block;
     height:18px;
     width:18px; 
+    align-content: right;
+    position:absolute;
+    top:0px;
+    left:0px;
 }
 
 #topBar{
