--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,21 @@
+
+/* top section bar  */
 #envelope{
     height: 75px;
     width: 75px;
 }
+
+
+#topBar{
+    background-color: rgb(226, 84, 84);
+}
+
+#topWord{
+    display:inline-block;
+    font-size:35px;
+}
+
+/* search bar stuff */
 
 #searchBar{
     width:500px;
@@ -29,11 +43,8 @@
     left:0px;
 }
 
-#topBar{
-    background-color: rgb(226, 84, 84);
-}
-
-#topWord{
-    display:inline-block;
-    font-size:35px;
+/* sidebar stuff  */
+#sidebar{
+    border-style: solid;
+    width:200px;
 }
