--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@
     font-size:35px;
 }
 
+/* compose button stuff */
+#compose{
+    font-size:35px;
+    height:500x;
+    width:175px;
+    border-radius: 3px;
+}
 /* search bar stuff */
 
 #searchBar{
@@ -35,7 +42,7 @@
 
 #glass{
     height:30px;
-    width:30    px; 
+    width:30px; 
     position:absolute;
     margin-left:450px;
     margin-top:10px;
@@ -46,5 +53,6 @@
 /* sidebar stuff  */
 #sidebar{
     border-style: solid;
+    border-width: 1px;
     width:200px;
 }
