--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@
     font-size:35px;
     height:500x;
     width:175px;
-    border-radius: 3px;
+    border-radius: 10px;
+    border-width:3px;
 }
 /* search bar stuff */
 
@@ -55,4 +56,8 @@
     border-style: solid;
     border-width: 1px;
     width:200px;
+}
+
+.sidebarItems:hover{
+    background-color: gray;
 }
