--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@
     font-size:35px;
 }
 
+#userImage{
+    height: 75px;
+    width: 75px;
+    margin-left:155%;
+    margin-top:-15%;
+}
+
 /* compose button stuff */
 #compose{
     font-size:35px;
