--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@
 
 .sidebarItems:hover{
     background-color: gray;
+    
 }
 
 #counter{
@@ -92,11 +93,15 @@
     margin-top:3%;
     border:solid;
     width:200px;
+   
     border-width:1px;
     padding-bottom: 20px;
+    border-radius:7px;
+    
 }
 #userImageTwo{
     margin-bottom:-10%;
+    margin-left:2%;
     height:45px;
     width:45px
 }
