--- a/css/style.css
+++ b/css/style.css
@@ -150,12 +150,13 @@ body{
 #main{
     margin-top:3%;
     margin-left:17%;
+    height:500px;
     overflow-y: auto;
     font-size:15px;
 
 }
 
-.box{
+.box, .newMessage{
     border:solid;
     border-width:1px;
     border-radius: 5px;
@@ -192,6 +193,9 @@ body{
 
 .message, .newMail{
     display:none;
+    border-top:dotted;
+    border-top-width: 1px;
+    padding-top:15px;
     
 }
 
